objects/ProgramPeriod__c.object
<CustomObject>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The agency associated with the program zone and area</description>
        <inlineHelpText>The agency associated with the program zone and area</inlineHelpText>
        <label>Agency</label>
        <referenceTo>Agency__c</referenceTo>
        <relationshipName>ProgramAreas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The area associated with the program zone and agency</description>
        <inlineHelpText>The area associated with the program zone and agency</inlineHelpText>
        <label>Area</label>
        <referenceTo>Area__c</referenceTo>
        <relationshipName>ProgramAreas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>The date this program zone, area, agency combination ended</description>
        <inlineHelpText>The date this program zone, area, agency combination ended</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FullNameFormula__c</fullName>
        <formula>Trim(Left(Program__r.ShortName__c, 12)) &amp; &apos;_&apos; &amp; Trim(Left(Agency__r.Name, 27)) &amp; &apos;_&apos; &amp; Trim(Left(Area__r.Name, 27)) &amp; &apos;_&apos; &amp;TEXT(MONTH(StartDate__c)) + &quot;/&quot; + RIGHT(TEXT(YEAR(StartDate__c)),2)&amp; &apos;_&apos; &amp;TEXT(MONTH(EndDate__c)) + &quot;/&quot; + RIGHT(TEXT(YEAR(EndDate__c)),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IE2ProgramExpansionID__c</fullName>
        <label>IE2ProgramExpansionID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IE2ProgramID__c</fullName>
        <label>IE2ProgramID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProgramPeriodEID__c</fullName>
        <description>The Enterprise ID for this Program Period.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Program Period.</inlineHelpText>
        <label>Program Period EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Program Periods</relationshipLabel>
        <relationshipName>ProgramPeriods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>The date this program zone, area, agency combination began</description>
        <inlineHelpText>The date this program zone, area, agency combination began</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Program Period</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Agency__c</columns>
        <columns>Area__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>IE2ProgramID__c</columns>
        <columns>IE2ProgramExpansionID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>